chore(gradle): declare Add-Opens in root buildscript